syntax = "proto3";



package user_info;

option go_package = "github.com/shaineminkyaw/grpc_lab/user_info/pb";


message LoginServerRequest {
    uint64  id =1;
}


message ResponseToLoginServer {
    bool result =1;
}


message AllIDRequest {
    repeated LoginServerRequest all_id=1;
}

// message AllIDResponse {
//     repeated ResponseToLoginServer result=1;
// }